package org.example;

public interface IStateExcursion {
    public void inscribir(Usuario unUsuario, Excursion excursion);
    public String obtenerInformacion(Excursion excursion);
}
