@startuml

class Excursion <<Context>> {
  -listaProvisorio: List<Usuario>
  -listaDefinitiva: List<Usuario>
  -nombre: String
  -fechaInicio: LocalDate
  -fechaFin: LocalDate
  -precio: double
  -cupoMinimo: int
  -cupoMaximo: int
  -estadoExcursion: IStateExcursion
  -puntodeEncuentro: String

  +Excursion(nombre: String, fechaInicio: LocalDate, fechaFin: LocalDate, precio: double, cupoMinimo: int, cupoMaximo: int, estadoExcursion: IStateExcursion, puntodeEncuentro: String)
  +setEstadoExcursion(estadoExcursion: IStateExcursion): void
  +inscribir(unUsuario: Usuario): void
  +obtenerInformacion(): String
  +agregarInscripto(unUsuario: Usuario): void
  +moverProvisorioADefinitivo(): void
  +seAlcanzoCupoMaximo(): boolean
  +seAlcanzoCupoMinimo(): boolean
  +obtenerMailInsciptos(): List<String>
  +faltantesParaMinimo(): int
  +faltantesParaMaximo(): int
  +getNombre(): String
  +getFechaInicio(): LocalDate
  +getFechaFin(): LocalDate
  +getPrecio(): double
  +getPuntodeEncuentro(): String
}

interface IStateExcursion <<State>> {
  +inscribir(unUsuario: Usuario, excursion: Excursion): void
  +obtenerInformacion(excursion: Excursion): String
}

class ExcursionProvisorio <<ConcreteState>> {
  +inscribir(unUsuario: Usuario, excursion: Excursion): void
  +obtenerInformacion(excursion: Excursion): String
}

class ExcursionDefinitivo <<ConcreteState>> {
  +inscribir(unUsuario: Usuario, excursion: Excursion): void
  +obtenerInformacion(excursion: Excursion): String
}

class ExcursionLleno <<ConcreteState>> {
  +inscribir(unUsuario: Usuario, excursion: Excursion): void
  +obtenerInformacion(excursion: Excursion): String
}

class Usuario {
  -nombre: String
  -apellido: String
  -email: String

  +Usuario(nombre: String, apellido: String, email: String)
  +getNombre(): String
  +getApellido(): String
  +getEmail(): String
}

Excursion --> IStateExcursion : estadoExcursion
Excursion --> Usuario : listaProvisorio 0..*
Excursion --> Usuario : listaDefinitiva 0..*

ExcursionProvisorio ..|> IStateExcursion
ExcursionDefinitivo ..|> IStateExcursion
ExcursionLleno ..|> IStateExcursion

@enduml